:hover break on some touch devices, fixed

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -10,7 +10,7 @@ $font-size: 20px;
 body {
   padding: 0;
   margin: 0;
-  position: relative;
+//  position: relative;
   font-size: $font-size;
   font-family: $base-font-family;
 }
